syntax = "proto3";

package user_grpc;

option go_package = "/user-grpc";


service UserGPRC{
    rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest{
    string email = 1;
    string password = 2;
}

message UserResponse{
    int64 id = 1;
    string email = 2;
    UserStatus user_status = 3;
    repeated UserRoles user_roles = 4;
}

enum UserStatus {
    NEW = 0;
    ACTIVE = 1;
    BANNED = 2;
}

enum UserRoles {
    SUPER = 0;
    ADMIN = 1;
    REGULAR = 2;
}